# parse_mate

./: LICENSE  README.md  pyproject.toml
mate_configs/: patterns.json
parse_mate/: file_finder.py
