[project]
name = "parse-mate"
version = "0.1.0"
description = ""
authors = [
    {name = "William",email = "williamsilva14@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "chardet (>=5.2.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "typer (>=0.15.1,<0.16.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
blue = "^0.9.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.1"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-macros-plugin = "^1.3.7"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
test = "pytest --doctest-modules -s --cov=parse_mate -v"
post_test = "coverage html"

